# aoc-2020

./: Cargo.toml  README.md
day-eight/src/: main.rs
day-eighteen/src/: day18.rs  expressions.rs
day-eleven/src/: coordinates.rs  main.rs  map.rs  seat.rs
day-fifteen/src/: day15.rs  numbers.rs
day-five/src/: main.rs
day-fourteen/src/: docking.rs  main.rs
day-nine/src/: main.rs
day-seven/src/: main.rs
day-seventeen/src/: convay_cubes_3D.rs  convay_cubes_4D.rs  day17.rs
day-six/src/: main.rs
day-sixteen/src/: day16.rs  tickets.rs
day-ten/src/: main.rs
day-thirteen/src/: bus.rs  main.rs
day-twelve/src/: main.rs  ship.rs
day_four/src/: main.rs
day_three/src/: main.rs
day_two/src/: main.rs
src/: main.rs
